migracion del play, parte 3

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -53,3 +53,20 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+ENUM.Sexo.MASCULINO=Masculino
+ENUM.Sexo.FEMENINO=Femenino
+ENUM.Contextura.PEQUEÑA=Pequeña
+ENUM.Contextura.MEDIA=Media
+ENUM.Contextura.GRANDE=Grande
+ENUM.Dieta.VEGETARIANO=Vegetariano
+ENUM.Dieta.VEGANO=Vegano
+ENUM.Dieta.OVOLACTO=Ovolacto
+ENUM.Dieta.DIET=Dietetico
+ENUM.Dieta.DEPORTE=Deporte
+ENUM.Dieta.NORMAL=Normal
+ENUM.Rutina.NADA=Ninguno
+ENUM.Rutina.LEVE=Leve
+ENUM.Rutina.MEDIANO=Mediano
+ENUM.Rutina.INTENSIVO=Intensivo
+ENUM.Rutina.ACTIVA=Activa
