creacion de usuarios persistente - login con mensaje de error - pantalla principal recetas

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -61,9 +61,9 @@ ENUM.Contextura.MEDIA=Media
 ENUM.Contextura.GRANDE=Grande
 ENUM.Dieta.VEGETARIANO=Vegetariano
 ENUM.Dieta.VEGANO=Vegano
-ENUM.Dieta.OVOLACTO=Ovolacto
-ENUM.Dieta.DIET=Dietetico
-ENUM.Dieta.DEPORTE=Deporte
+ENUM.Dieta.OVOLACTO=Ovolacto vegetariano
+ENUM.Dieta.NATURISTA=Naturista
+ENUM.Dieta.DEPORTE=Deportista
 ENUM.Dieta.NORMAL=Normal
 ENUM.Rutina.NADA=Ninguno
 ENUM.Rutina.LEVE=Leve
