crear receta, parcialmente...

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -70,3 +70,7 @@ ENUM.Rutina.LEVE=Leve
 ENUM.Rutina.MEDIANO=Mediano
 ENUM.Rutina.INTENSIVO=Intensivo
 ENUM.Rutina.ACTIVA=Activa
+ENUM.Dificultad.BAJA=Baja
+ENUM.Dificultad.MEDIA=Media
+ENUM.Dificultad.DIFICIL=Dificil
+ENUM.Dificultad.MUY_DIFICIL=Muy Dificil
