--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -74,7 +74,7 @@ ENUM.Dificultad.BAJA=Baja
 ENUM.Dificultad.MEDIA=Media
 ENUM.Dificultad.DIFICIL=Dificil
 ENUM.Dificultad.MUY_DIFICIL=Muy Dificil
+ENUM.CondicionPreexistente.NINGUNA=Ninguna
 ENUM.CondicionPreexistente.HIPERTENSION=Hipertensión
 ENUM.CondicionPreexistente.DIABETES=Diabetes
 ENUM.CondicionPreexistente.CELIAQUIA=Celiasis
-
